# ai-document-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  ingest.py  main.py  rag.py
tests/: test_main.py
